# adam_datasets

./: .gitignore  README.md  requirements.txt  setup.cfg
adam_datasets/: cli.py
adam_datasets/sources/: __init__.py  nsc_dr2.py
adam_datasets/test/: test_crc32c.py
catalina/: 1DayDemo_FormatingToPrecovery.ipynb  Explore_bintable.ipynb  Precovery.ipynb
nsc/dr2/: nsc_dr2.ipynb  nsc_dr2.py  requirements.txt
ps1/dr2/: Query_objects.ipynb
sdss_dr9/: convert_to_hdf5.py  create_sdss_csvs.py  files_processed.txt  goals.txt  mjd_range_finder.py  precoveryIndexing.ipynb  sdss_dr9_precovery_nb.ipynb  sdss_dr9_precovery_nb_new.ipynb  sdss_dr9_preprocessing.ipynb  sdss_precovery_astroquery_nb.ipynb  sdss_test_orbit.ipynb  sdssdr9_potential_asteroids_ejgl.csv
skyMapper_dr2/: skyMapper2.0_dr2_download.ipynb
skymapper/dr2/: Month_combination.ipynb  SkyMapper_dr2.ipynb  SkyMapper_dr2_check.ipynb  SkyMapper_dr2_properties.ipynb  date_stat.csv  exposure_stat.csv  filter_ngood.ipynb  filter_quicksearch.ipynb  observations_stat.csv  update.ipynb
skymapper/dr2/precovery_result_df/: 105140.csv  11283.csv  127908.csv  136634.csv  136896.csv  138358.csv  138403.csv  138910.csv  141017.csv  141530.csv  142463.csv  143642.csv  152769.csv  154267.csv  162081.csv  162214.csv  162451.csv  162881.csv  162997.csv  163817.csv  165168.csv  170902.csv  171575.csv  173688.csv  175188.csv  180816.csv  180842.csv  185547.csv  189061.csv  197530.csv  197628.csv  198897.csv  198993.csv  199307.csv  199354.csv  199812.csv  200346.csv  200632.csv  200760.csv  (+153 more)
ztf/: ztf_data_processing.ipynb
