[metadata]
name = adam_datasets
version = 0.1.0

[options]
packages = find:
install_requires =
    astro-datalab
    numpy
    pandas
    astropy
    pyvo
    tables
    google-cloud-storage

[options.extras_require]
dev = 
    black
    flake8

[options.entry_points]
console_scripts = 
    adam-etl = adam_datasets.cli:main